[package]
name = "libsystemd"
version = "0.5.0"
authors = ["Luca Bruno <lucab@lucabruno.net>", "Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/libsystemd-rs"
documentation = "https://docs.rs/libsystemd"
description = "A pure-Rust client library to interact with systemd"
keywords = ["systemd", "linux"]
categories = ["api-bindings", "os::unix-apis"]
readme = "README.md"
exclude = [
".gitignore",
".travis.yml",
]
edition = "2018"

[dependencies]
hmac = "^0.12"
libc = "^0.2"
log = "^0.4"
nix = "^0.23"
nom = "7"
serde = { version = "^1.0.91", features = ["derive"] }
sha2 = "^0.10"
thiserror = "^1.0"
uuid = { version = "^1.0.0", features = ["serde"] }
once_cell = "^1.8"

[dev-dependencies]
quickcheck = "^1.0"
serde_json = "^1.0"
rand = "^0.8"
pretty_assertions = "^1.0"

[[test]]
name = "connected_to_journal"
harness = false

[package.metadata.release]
publish = false
push = false
post-release-commit-message = "cargo: development version bump"
pre-release-commit-message = "cargo: libsystemd release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "libsystemd {{version}}"
