[package]
name = "libsystemd"
version = "0.7.1"
authors = ["Luca Bruno <lucab@lucabruno.net>", "Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lucab/libsystemd-rs"
documentation = "https://docs.rs/libsystemd"
description = "A pure-Rust client library to interact with systemd"
keywords = ["systemd", "linux"]
categories = ["api-bindings", "os::unix-apis"]
readme = "README.md"
exclude = [
".gitignore",
".travis.yml",
]
edition = "2021"
rust-version = "1.69"

[dependencies]
hmac = "^0.12"
libc = "^0.2"
log = "^0.4"
nix = { version = "^0.29", default-features = false, features = ["dir", "fs", "socket", "process", "uio"] }
nom = "8"
serde = { version = "^1.0.91", features = ["derive"] }
sha2 = "^0.10"
thiserror = "^2.0"
uuid = { version = "^1.0", features = ["serde"] }
once_cell = "^1.8"

[dev-dependencies]
quickcheck = "^1.0"
serde_json = "^1.0"
rand = "^0.9"
pretty_assertions = "^1.0"

[[test]]
name = "connected_to_journal"
harness = false

[[test]]
name = "persistent_state"
harness = false

[package.metadata.release]
publish = false
push = false
pre-release-commit-message = "cargo: libsystemd release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "libsystemd {{version}}"
